correct popup, disable blurred, close popup on disabled
Former-commit-id: 22ff5fa967caf46601359733fe44d3af762e9b65

--- a/app/assets/stylesheets/responsive/_structure.scss
+++ b/app/assets/stylesheets/responsive/_structure.scss
@@ -26,33 +26,35 @@ body {
 }
 
 .wrapper-page {
-  &.disabled{
-    position:fixed;
-    top:0;
-    left:0;
-    background:#000;
-    opacity:0.8;
-    z-index:998;
-    height:100%;
-    width:100%;
-  }
-  .popup{
-    &.hidden {
-      display: none;
-    }
-    background-color: white;
-    padding: 3%;
-    position: absolute;
-    top: 40%;
-    left: 30%;
-    z-index:999;
-  }
   margin: 0;
   @include screen-xl {
     float: left;
     width: 70%;
     border-right: 1px solid $gray-light;
   }
+}
+
+.disabled{
+  position:fixed;
+  top:0;
+  left:0;
+  background:#000;
+  opacity:0.4;
+  z-index:998;
+  height:100%;
+  width:100%;
+}
+
+.popup{
+  &.hidden {
+  display: none;
+  }
+  background-color: white;
+  padding: 3%;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  z-index:999;
 }
 
 .wrapper-section {
